--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,13 @@ targetCompatibility = 1.8
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     testCompile('org.springframework.boot:spring-boot-starter-test')
+
+    // Mapbox dependencies
+    compile 'com.mapbox.mapboxsdk:mapbox-java-services:1.3.1'
+
+    // API.AI dependencies
+    compile 'ai.api:libai:1.3.5'
+    compile 'ai.api:sdk:2.0.2@aar'
 }
 
 task stage(dependsOn: ['build', 'clean'])
